# empathymachine

./: .gitignore  Cargo.toml  PLAN.md  README.md  config.sample.yaml  empathymachine  empathymachine-ca.pem
.github/workflows/: rust.yml
blocklists/: custom.sample.txt
certs/: installing_certs.md
docs/: importing_certs.md
src/: admin.rs  blocklist.rs  blocklist_fetcher.rs  ca.rs  config.rs  dns.rs  lib.rs  main.rs  proxy.rs  rewriter.rs
tests/: admin_dashboard.rs  blocking.rs  blocklist_fetcher.rs  cli_wrapper.rs  config_defaults.rs  dns.rs  metrics.rs  pass_through.rs  proxy_tls.rs
tests/fixtures/: sample_hosts.txt  test_blocklist.txt
