[package]
name = "empathymachine"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { version = "0.14", features = ["full"] }
http = "0.2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net", "io-util", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
reqwest = { version = "0.11", features = ["rustls-tls"] }
rcgen = { version = "0.14", features = ["pem", "x509-parser"] }
rustls = { version = "0.21", features = ["dangerous_configuration"] }
tokio-rustls = "0.24"
webpki-roots = "0.26"
once_cell = "1.19"
rustls-pemfile = "1.0"
lol_html = "0.4"
trust-dns-server = { version = "0.22", default-features = false, features = ["dnssec", "sqlite"] }
trust-dns-resolver = { version = "0.22", default-features = false, features = ["tokio-runtime", "dnssec", "dns-over-https", "dns-over-https-rustls", "dns-over-native-tls", "dns-over-rustls"] }
trust-dns-client = { version = "0.22", default-features = false, features = ["dnssec", "ring"] }
trust-dns-proto = { version = "0.22", default-features = false, features = ["dnssec", "ring"] }
thiserror = "1.0"
async-trait = "0.1"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
portpicker = "0.1.1"
tempfile = "3"
